# Rxchixs-Game-

./: .gitignore  AGENTS.MD  Cargo.toml  README.md  plan.md
data/: starter_factory.ron  starter_sim.ron
data/papa/: plan_ligne.ron
docs/: CONCEPT_JEU.md  PLANS.md  codex.md
maps/: main_map.ron
maps/layouts/: autosave_editor.ron
saves/: 20260222_231736_sauvegarde_2026_02_22_231516sdzzqdqzqszz.ron
src/: character.rs  chariot_elevateur.rs  deplacement.rs  edition.rs  editor_tools.rs  four_texture.rs  historique.rs  interactions.rs  main.rs  modes.rs  render_safety.rs  rendu.rs  sauvegarde.rs  sim.rs  social.rs  ui_editor.rs  ui_hud.rs  ui_kit.rs  ui_pawns.rs  utilitaires.rs
src/character/: rendu_personnage.rs
src/gestion/: commandes.rs  lignes.rs  mod.rs  personnel.rs  stock.rs  vente.rs
src/papa/: constructeur.rs  etat.rs  mod.rs  placement.rs  plan.rs
src/rendu/: effets.rs  menu_principal.rs  monde.rs  production.rs  theme.rs
src/telephone/: contacts.rs  etat.rs  interface.rs  mod.rs
target_codex_smoke/: .rustc_info.json
target_codex_smoke/debug/: RxchixsGAME.d
target_codex_smoke/debug/.fingerprint/RxchixsGAME-5d40cdbc781a0597/: bin-RxchixsGAME  bin-RxchixsGAME.json  dep-bin-RxchixsGAME
target_codex_smoke/debug/.fingerprint/adler2-cfadf571ef660f89/: lib-adler2  lib-adler2.json
target_codex_smoke/debug/.fingerprint/allocator-api2-74a36ad2ebd40c9a/: lib-allocator_api2  lib-allocator_api2.json
target_codex_smoke/debug/.fingerprint/autocfg-713c8d363d9980d8/: lib-autocfg  lib-autocfg.json
(+106 files in other folders)
